# sim-behavior

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CompilerFlags.cmake  Dependencies.cmake
docs/: third_party_backend_usage_manual.html
docs/design/: architecture.md  behaviorTree+onetbb+uvw.md
include/sim_bt/adapters/: i_command_bus.hpp
include/sim_bt/bt_nodes/: async_action_base.hpp  condition_base.hpp  i_async_action_context.hpp  i_sync_node_context.hpp  sync_action_base.hpp
include/sim_bt/common/: result.hpp  sim_bt_log.hpp  types.hpp
include/sim_bt/domain/entity/: i_entity_context.hpp
include/sim_bt/domain/group/: i_group_context.hpp
include/sim_bt/domain/world/: i_world_snapshot.hpp
include/sim_bt/runtime/async_runtime/: i_bus_adapter.hpp  i_event_loop_runtime.hpp  i_wakeup_bridge.hpp
include/sim_bt/runtime/bt_runtime/: i_bt_runtime.hpp
include/sim_bt/runtime/compute_runtime/: i_cancellation_token.hpp  i_job_executor.hpp  i_job_handle.hpp  i_result_mailbox.hpp
scripts/: vendor-deps.sh
src/adapters/: CMakeLists.txt  command_bus_impl.cpp  uvw_udp_bus_adapter.hpp
src/bt_nodes/: CMakeLists.txt  async_action_base.cpp  condition_base.cpp  sync_action_base.cpp
src/common/: CMakeLists.txt  sim_bt_log.cpp
src/domain/: CMakeLists.txt
src/domain/entity/: entity_context_impl.cpp  entity_context_impl.hpp
src/domain/group/: group_context_impl.cpp
src/domain/world/: world_snapshot_impl.cpp  world_snapshot_provider_impl.cpp
src/runtime/async_runtime/: CMakeLists.txt  uvw_event_loop_runtime.cpp  uvw_event_loop_runtime.hpp  uvw_timer_handle.cpp  uvw_timer_handle.hpp  uvw_wakeup_bridge.cpp  uvw_wakeup_bridge.hpp
src/runtime/bt_runtime/: CMakeLists.txt  async_action_context_impl.cpp  async_action_context_impl.hpp  bt_runtime_impl.cpp  sync_node_context_impl.cpp  sync_node_context_impl.hpp  tree_instance_impl.cpp
src/runtime/compute_runtime/: CMakeLists.txt  default_result_mailbox.cpp  default_result_mailbox.hpp  tbb_job_executor.cpp  tbb_job_executor.hpp  tbb_job_handle.hpp
src/sim_host/: CMakeLists.txt  main.cpp  sim_host_app.cpp  sim_host_app.hpp
tests/: CMakeLists.txt  test_async_action_base.cpp  test_bus_adapter.cpp  test_cancellation_token.cpp  test_cross_library_integration.cpp  test_entity_context.cpp  test_group_context.cpp  test_multi_entity.cpp  test_phase4_perf.cpp  test_result_mailbox.cpp
tools/: CMakeLists.txt
